--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -14,17 +14,10 @@
   justify-content: center;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
-  color: $body-color;
-  background-color: $white;
-  border: $btn-border-width solid $gray-700;
 
   &:hover,
   &:focus {
     cursor: pointer;
-  }
-
-  &:hover {
-    background-color: $gray-400;
   }
 
   &:last-child {
@@ -58,40 +51,104 @@
 // Alternate buttons
 //
 
-@each $color, $value in $theme-colors {
-  .btn-#{$color} {
-    @include button-variant($value, $value);
-  }
-}
-
 .btn-warning,
 .btn-warning:hover,
-.btn-warning:focus {
+.btn-warning:focus,
+.btn-outline-warning:hover,
+.btn-outline-warning:focus {
   color: #fff;
 }
 
-.btn.disabled,
-.btn.disabled:hover {
-  border-color: $gray-400;
-  background-color: $gray-400;
-  color: $text-muted;
-  cursor: not-allowed;
-}
-
-// btn-group btn-light overrides
+// btn-light overrides
 
 .btn-light {
+  color: $body-color;
+  background-color: $gray-200;
   border-color: $gray-700;
 
   &:hover,
   &:focus {
     background-color: $gray-400;
+    border-color: $gray-700;
+  }
+
+  &:active,
+  &.active {
+    background-color: $gray-500;
+    border-color: $gray-700;
+  }
+
+  &.disabled,
+  &:disabled {
+    background-color: $gray-200;
+    border-color: $gray-700;
   }
 }
 
-.btn-group > .btn-light,
-.btn-group > .btn {
-  border-color: $gray-rgba-300; // $gray-700
+.btn-light:not(:disabled):not(.disabled):active,
+.btn-light:not(:disabled):not(.disabled).active,
+.show > .btn-light.dropdown-toggle {
+  background-color: $gray-400;
+  border-color: $gray-700;
+}
+
+.btn.disabled,
+.btn.disabled:hover {
+  cursor: not-allowed;
+}
+
+// btn-outline-light overrides since color and border are too light
+
+.btn-outline-light {
+  color: $body-color;
+  background-color: $white;
+  border: $input-btn-border-width solid $gray-700;
+
+  &:hover,
+  &:focus {
+    color: $body-color;
+    background-color: $gray-400;
+    border: $input-btn-border-width solid $gray-700;
+  }
+  &:active,
+  &.active {
+    color: $body-color !important;
+    background-color: $gray-500;
+    border: $input-btn-border-width solid $gray-700 !important;
+  }
+
+  &.disabled,
+  &:disabled {
+    color: $body-color;
+    background-color: $white;
+  }
+}
+
+.btn-light:not(.dropdown-toggle):not([disabled]):not(.disabled).active,
+.btn-outline-light:not(.dropdown-toggle):not(:disabled):not(.disabled).active,
+.btn-secondary:not(.dropdown-toggle):not(:disabled):not(.disabled).active,
+.btn-outline-secondary:not(.dropdown-toggle):not(:disabled):not(.disabled).active {
+  color: $white !important;
+  background-color: theme-color("secondary");
+  border: $input-btn-border-width solid darken(theme-color("secondary"), 5%) !important;;
+}
+
+.show > .btn-outline-light.dropdown-toggle {
+  color: $body-color;
+  background-color: $white;
+  border-color: $gray-700;
+
+  &:hover {
+    background-color: $gray-400;
+    border-color: $gray-700;
+    box-shadow: none;
+  }
+
+  &:focus {
+    background-color: $white;
+    border-color: $gray-700;
+    box-shadow: none;
+  }
 }
 
 
@@ -99,7 +156,6 @@
 // Import Button Styles
 //
 
-@import "_btn-outline";
 @import "_btn-outline-text";
 @import "_btn-link";
 @import "_btn-link-bg";
@@ -107,7 +163,6 @@
 @import "_btn-hover-bg";
 @import "_btn-toggler";
 @import "_btn-check-radio";
-@import "_btn-multistate";
 
 
 // todo: need to move to modal footer and check items
@@ -184,12 +239,7 @@
   font-size: 1.25rem;
   font-weight: $btn-font-weight;
   padding: 1.25rem 3rem;
-  border-width: 2px;
   line-height: 1.8;
-
-  &:hover {
-    border-width: 2px;
-  }
 }
 
 
