--- a/src/components/screen/styles.scss
+++ b/src/components/screen/styles.scss
@@ -78,6 +78,7 @@ $sidenav-width:     300px;
 
 .screen-sidenav-toggler {
   position: absolute;
+  top: 0;
   right: 0;
   margin-bottom: 0;
   padding: .5rem;
