--- a/src/components/trinary-control/styles.scss
+++ b/src/components/trinary-control/styles.scss
@@ -8,7 +8,7 @@
   line-height: 1.6;
   min-width: 4.25rem;
   border: 1px solid $input-border-color;
-  border-radius: $form-control-radius;
+  border-radius: $border-radius;
   overflow: hidden;
   background-color: $input-bg;
   vertical-align: middle;
